# hmf

./: .gitignore  Cargo.toml  all_hmf_refactored.R  gamahmf.r  plot_halo_stellar.py  sdss_hmf_refactor.R
heirachal_bayesian/: applying_closed_model_to_gama.R  basic_mrp_model.jags  diagnostic_plot.R  direct_mhalo.R  direct_mhalo_z_relation.rds  do_what_simon_did.R  empirical_fits.R  empirical_relations.rds  gpt_attempt_at_correct_model.R  hmf_mrp_model_full.jags  mrp_binned.jags  mrp_binned.rds  mrp_binned.stan  mrp_binned_chain.rds  mrp_fixed.jags  mrp_unbinned_fixed.jags  mrp_unbinned_trunc_halos.rds  mrp_unbinned_trunc_halos.stan  mrp_unbinned_trunc_numeric.stan  mrp_unbinned_trunc_numeric_fixed.stan  recover_test_with_errors.R  recovery_test.R  recovery_test_no_errors.R  recovery_test_plots.R  shuntov_edc.R  sim_recovery_results.rds  sim_recovery_v12.rds  sim_recovery_v14.rds  sim_recovery_v15.rds  sim_recovery_v3.rds  sim_recovery_v4.rds  sim_recovery_v5.rds  sim_recovery_v6.rds  sim_recovery_v8.rds  simple_hmf_samples.rds  stage1.stan  stage1_results.rds  stage1_stan_results.rds  stage2.stan  (+17 more)
python_rewrite/: README.md  diagnose_alpha.py  diagnose_am.py  diagnose_combined_hang.py  diagnose_completeness.py  diagnose_faint_data.py  diagnose_fixed_beta.py  diagnose_lambda_floor.py  diagnose_norm.py  diagnose_norm2.py  diagnose_pinned_mstar.py  diagnose_systematic.py  main.py  measure_completeness.py  measure_completeness_sdss.py  mrp_marg  mrp_marg.stan  mrp_simple  mrp_simple.stan  pyproject.toml  recover_completeness.py  recover_table_completeness.py  recovery.py
(+35 files in other folders)
